# hem

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  docker-compose.dev.yml  main.py  pyproject.toml  repository.yaml
.github/workflows/: build.yml
blueprints/: hem_actuator.yaml  hem_watchdog.yaml
docs/: SETUP.md
hem/: .env.example  CHANGELOG.md  DOCS.md  Dockerfile  OPTIMIZER.md  build.yaml  config.yaml  dev-options.json.example  pyproject.toml
hem/frontend/: bunfig.toml  index.html  package.json  tsconfig.json  vite.config.ts
hem/frontend/src/: App.tsx  ModeStrip.tsx  PlanView.tsx  TestView.tsx  Tiles.tsx  api.ts  charts.tsx  hover.ts  index.css  iosScrollKick.ts  main.tsx  planRefresh.ts  theme.ts
hem/frontend/src/components/ui/: card.tsx  switch.tsx
hem/frontend/src/settings/: EntityPicker.tsx  SandboxPanel.tsx  SettingsView.tsx  VacationCard.tsx  form.tsx  spec.ts
hem/src/hem/: __main__.py  config.py  config_store.py  executor.py  explain.py  main.py  models.py  planner.py  recorder.py  simulate.py  snapshot.py  time_travel.py  timegrid.py
hem/src/hem/adapters/: amber.py  solar.py  sungrow.py  weather.py
hem/src/hem/backtest/: cli.py  policies.py  sim.py
hem/src/hem/forecast/: load.py
hem/src/hem/ha/: client.py  publisher.py
hem/src/hem/optimizer/: model.py  result.py
hem/src/hem/web/: app.py
hem/src/hem/web/static/: index.html
hem/tests/: conftest.py  test_adapters.py  test_backtest.py  test_config.py  test_executor.py  test_explain.py  test_ha_client.py  test_load_forecast.py  test_optimizer.py  test_planner.py  test_recorder.py  test_scheduler.py  test_simulate.py  test_spike_cap.py  test_sungrow.py  test_time_travel.py  test_timegrid.py  test_web.py
hem/tests/fixtures/: amber_express_feed_in_price.yaml  amber_express_general_price.yaml  amber_express_price_spike.yaml  solar_production_today.yaml  solar_production_tomorrow.yaml  weather_henley_beach_hourly.yaml
hem/translations/: en.yaml
