[project]
name = "hem"
version = "0.1.1"
description = "Home Energy Manager — MILP battery/solar optimizer add-on for Home Assistant"
readme = "DOCS.md"
requires-python = ">=3.13"
dependencies = [
    "cvxpy-base>=1.6,<1.7",
    "highspy>=1.9,<2",
    "numpy>=2.1,<3",
    "aiohttp>=3.10,<4",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.4,<3",
    "python-dotenv>=1",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "freezegun>=1.5",
    "ruff>=0.6",
    "pyyaml>=6",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hem"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "ASYNC"]
